<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/orr1"
    tools:context="com.example.yuval.finalproject.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingTop="5dp"
                android:text="@string/title_fragment_register"
                android:textColor="#9932CC"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textSize="40sp"
                android:textStyle="bold|italic" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="@string/first_name_colon"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/fragment_register_fName_editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_first_name"
                        android:fontFamily="casual"
                        android:inputType="textPersonName" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="@string/last_name_colon"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/fragment_register_lName_editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_last_name"
                        android:fontFamily="casual"
                        android:inputType="textPersonName" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="@string/email_colon"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/fragment_register_email_editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_email"
                        android:fontFamily="casual"
                        android:inputType="textEmailAddress" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="@string/password_colon"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/fragment_register_password_editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_password"
                        android:fontFamily="casual"
                        android:inputType="textPassword" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="Business"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textStyle="bold" />
                    <CheckBox
                        android:id="@+id/fragment_register_isBusiness"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/fragment_register_table_bus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp">

                <TableRow
                    android:id="@+id/fragment_register_addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="Address"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/fragment_register_address_editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Address"
                        android:fontFamily="casual"
                        android:inputType="textPassword" />
                </TableRow>
                <TableRow
                    android:id="@+id/fragment_register_Treatments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="Treatments :"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:id="@+id/fragment_register_gel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="Gel nail polish"
                        android:textStyle="bold" />
                    <CheckBox
                        android:id="@+id/fragment_register_Gel_nail_polish"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow
                    android:id="@+id/fragment_register_laser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="Laser hair removal"
                        android:textStyle="bold" />
                    <CheckBox
                        android:id="@+id/fragment_register_Laser_hair_removal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />
                </TableRow>



            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:layout_weight="2">

                <Button
                    android:id="@+id/fragment_register_verifyEmail_btn"
                    android:layout_width="188dp"
                    android:layout_height="66dp"
                    android:fontFamily="casual"
                    android:text="@string/verify_email"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/fragment_register_btn"
                    android:layout_width="188dp"
                    android:layout_height="66dp"
                    android:fontFamily="casual"
                    android:tag="1"
                    android:text="@string/register"
                    android:textStyle="bold" />
                <!--tag=1 is for registration and 2 is for sign In wheb the button changes-->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
